package mei.designpattern.bridge.structure;

public class ConcreteImplementor implements Implementor {
    public void operationImpl() {
        // code impl
    }
}
