@startuml

abstract class Abstraction {
#Implementor impl
+void setImpl(Implementor impl)
+{abstract} void operation()
}

class RefinedAbstraction {
+public void operation()
}

Interface Implementor {
+void operationImpl()
}

class ConcreteImplementor {
+void operationImpl()
}

note left of Abstraction
impl.operationImpl();
end note

Implementor <|.. ConcreteImplementor
Abstraction <|-- RefinedAbstraction
Abstraction o-right-> Implementor

@enduml